<resources>
    <string name="app_name">SOPT_1th_Seminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sharedpreference_name">autoLogin</string>
    <string name="name_hint_text">이름를 입력해주세요</string>
    <string name="email_hint_text">이메일을 입력해주세요</string>
    <string name="pass_hint_text">비밀번호를 입력해주세요</string>
    <string name="name_text">이름</string>
    <string name="email_text">이메일</string>
    <string name="password_text">비밀번호</string>
    <string name="signUp_btn_text">JOIN</string>
    <string name="signIn_btn_text">LOGIN</string>
    <string name="go_to_signUp_text">회원가입 하러가기</string>
    <string name="kakao_app_key">afb2d846f7709e6be8170a6a20d01a88</string>
</resources>